--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
 <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
 <!--http://www.google.com/search?q=monster-->
 
-
 <section>
     <div class="style">
         <a class="style" href="#home">Home</a>
         <a href="#search google">About</a>
-        <input type="text" placeholder="Search Google or type a URL"></input>
+        <input type="text" placeholder="Search Google or type a URL" maxlength=100"></input>
 
 
     </div>
@@ -39,5 +38,14 @@
         </form>
     </aside>
 </section>
+<footer1>
+    <button>Advertising</button>
+    <button>Business</button>
+</footer1>
+
+<footer2>
+    <button>How Search Works</button>
+    <button>Privacy Terms</button>
+</footer2>
 </body>
 </html>
