--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
         </form>
     </aside>
 </section>
-<footer1>
-    <button>Advertising</button>
-    <button>Business</button>
-</footer1>
+<!--<footer1>-->
+<!--    <button>Advertising</button>-->
+<!--    <button>Business</button>-->
+<!--</footer1>-->
 
-<footer2>
-    <button>How Search Works</button>
-    <button>Privacy Terms</button>
-</footer2>
+<!--<footer2>-->
+<!--    <button>How Search Works</button>-->
+<!--    <button>Privacy Terms</button>-->
+<!--</footer2>-->
 </body>
 </html>
